.nks/be-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: be-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: "nks-game.clovapatra.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: clovapatra-game-service
                port:
                  number: 8000
    - host: "nks-signaling.clovapatra.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: clovapatra-signaling-service
                port:
                  number: 8001
    - host: "nks-voice-processing.clovapatra.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: clovapatra-voice-service
                port:
                  number: 8002
