.nks/clovapatra-signaling.yaml
# Deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  name: clovapatra-signaling
  labels:
    app: clovapatra-signaling
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clovapatra-signaling
  template:
    metadata:
      labels:
        app: clovapatra-signaling
    spec:
      containers:
        - name: clovapatra-signaling
          image: clovapatra-container-registry.kr.ncr.ntruss.com/clovapatra-signaling:latest
          ports:
            - containerPort: 8001
      nodeSelector:
        ncloud.com/nks-nodepool: signaling
      imagePullSecrets:
        - name: regcred

---
# Service

apiVersion: v1
kind: Service
metadata:
  name: clovapatra-signaling-service
  labels:
    app: clovapatra-signaling
spec:
  type: ClusterIP
  selector:
    app: clovapatra-signaling
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001

---
# Ingress

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clovapatra-signaling-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-certificate-no: "35205"
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/healthcheck-path: "/health-check"
spec:
  rules:
    - host: nks.signaling.clovapatra.com
      http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: clovapatra-signaling-service
                port:
                  number: 8001
