.nks/fe-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fe-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/try-files: "$uri /index.html"
spec:
  ingressClassName: nginx
  rules:
    - host: "nks-fe.clovapatra.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: clovapatra-fe-service
                port:
                  number: 80
